--- a/01-ec2.yaml
+++ b/01-ec2.yaml
@@ -1,7 +1,7 @@
 ---
 Resources:
     MyInstance:
-        Type: AWS::EC2::Template
+        Type: AWS::EC2::Instance
         Properties:
             AvailabilityZone: us-east-1a
             ImageId: ami-a4c7edb2
